# ComfyUI-GLM_Image

./: .gitignore  LICENSE  NOTICE  NOTICE.md  README.md  __init__.py  loader_nodes.py  pyproject.toml  requirements.txt  sampler_nodes.py  separate_nodes.py  utils.py
example_workflows/: _legacy_4step_smoke.json  _native_t2i_smoke.json  master_workflow.json
glm_native/: __init__.py  attention.py  clip.py  latent_format.py  model.py  model_sampling.py  preview.py  reference.py  timing.py  vae.py
